Added some text about Rigspolitet

--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -7,9 +7,11 @@ Interested parties are the groups of people who are being affected either negati
 
 \subsubsection{NASA}
 
-\subsubsection{The Danish Army}
+\subsubsection{The Royal Danish Army}
+The Royal Danish Army, or simply The Army.
 
 \subsubsection{The National Police}
+Also known as \textit{Rigspolitet}\cite{Police}, The National Police is the national police force of Denmark, but also having authority over regions governed by The Kingdom of Denmark, the Faroe Islands and Greenland. As the nation's main police force, it is part of their duty to avert any danger or possible terrorist attack in order to protect the population and public peace. As we identified dealing with terrorist attacks and hostage situations as a possible application for our technology, The National Police would be a potential user of such technology in these cases, assisting them with mapping a building where a kidnapping takes place or any other criminal offense.
 
 \subsection{Actors}
 Actors are a subset of \textit{Interested parties}, who have any influence on the development of the project, either by financing it, providing knowledge or help the development of the project.
@@ -18,8 +20,7 @@ Actors are a subset of \textit{Interested parties}, who have any influence on th
 Technology carriers are a subset of \textit{Actors} who have influence to change the direction of the project.
 
 \subsubsection{Danish Explosive Ordnance Disposal squad} 
-Also known as \textit{Ammunitionsrydningstjenesten} or \textit{EOD} in Danish, refers to the Danish bomb disposal squad \cite{EOD}. %http://www2.forsvaret.dk/viden-om/indland/ammunitionsrydning/Pages/Ammunitionsrydning2.aspx
-They are the one called in for emergency situations or bomb squares, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
+Also known as \textit{Ammunitionsrydningstjenesten} or \textit{EOD} in Danish, refers to the Danish bomb disposal squad \cite{EOD}. They are the one called in for emergency situations or bomb squares, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
 
 \subsubsection{Group H103}	
 Group H103 is the group who develops the solution for this project. The group consists of:
@@ -39,7 +40,7 @@ Group H103 is the group who develops the solution for this project. The group co
 	   	Danish Explosive Ordnance Disposal squad & Technology carriers &  \\ \hline
  	   	NASA & Interested parties &  \\ \hline
  	   	ESA & Interested parties &  \\ \hline
- 	   	The Danish Army & Interested parties & \\ \hline
+ 	   	The Royal Danish Army & Interested parties & \\ \hline
  	   	The National Police & Interested parties &  \\
 	   	\hline
 	\end{tabular}
