Added a section about NASA

--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -6,7 +6,7 @@ Interested parties are the groups of people who are being affected either negati
 \subsubsection{ESA}
 
 \subsubsection{NASA}
-The National Aeronautics and Space Administration, or more commonly known as NASA. 
+The National Aeronautics and Space Administration, or more commonly known as NASA is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS is not available and no maps are generated of these planets without prior research missions. 
 
 \subsubsection{The Royal Danish Army}
 The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks} %http://forsvaret.dk/FKO/ENG/FACTS%20AND%20FIGURES/AIM%20AND%20TASKS/Pages/default.aspx
