--- a/report/citations.bib
+++ b/report/citations.bib
@@ -231,3 +231,8 @@
 	howpublished = "\url{https://www.politi.dk/en/About_the_police/national_police/}"
 }
 
+@MISC{armytasks,
+	title = {Forsvaret For Danmark - Aim and Tasks},
+	howpublished = "\url{http://forsvaret.dk/FKO/ENG/FACTS%20AND%20FIGURES/AIM%20AND%20TASKS/Pages/default.aspx}"
+}
+
