--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -9,8 +9,7 @@ Interested parties are the groups of people who are being affected either negati
 The National Aeronautics and Space Administration, or more commonly known as NASA is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS is not available and no maps are generated of these planets without prior research missions. 
 
 \subsubsection{The Royal Danish Army}
-The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks} %http://forsvaret.dk/FKO/ENG/FACTS%20AND%20FIGURES/AIM%20AND%20TASKS/Pages/default.aspx
-. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack, and therefore The Army could potentially implement our mapping technology.
+The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks}. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack, and therefore The Army could potentially implement our mapping technology.
 
 \subsubsection{The National Police}
 Also known as \textit{Rigspolitet}\cite{Police}, The National Police is the national police force of Denmark, but also having authority over regions governed by The Kingdom of Denmark, the Faroe Islands and Greenland. As the nation's main police force, it is part of their duty to avert any danger or possible terrorist attack in order to protect the population and public peace. As we identified dealing with terrorist attacks and hostage situations as a possible application for our technology, The National Police would be a potential user of such technology in these cases, assisting them with mapping a building where a kidnapping takes place or any other criminal offense.
