--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -3,10 +3,11 @@
 \subsection{Interested parties}
 Interested parties are the groups of people who are being affected either negatively or positively by the product in question. They have some influence over the development, as the trends and actions of these interested parties has to be taken into consideration by the development team.
 
-\subsubsection{ESA}
-
 \subsubsection{NASA}
 The National Aeronautics and Space Administration, or more commonly known as NASA is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS is not available and no maps are generated of these planets without prior research missions. 
+
+\subsubsection{ESA}
+The European Space Agency or simply ESA, is the European counter-part of NASA, governed by 22 member states, with the aim of space exploration and research. Similar interest applies to ESA as to NASA, therefore they can be classified as an Interested party in our assesment.
 
 \subsubsection{The Royal Danish Army}
 The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks}. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack, and therefore The Army could potentially implement our mapping technology.
