Added section to Chapter 2 for Preliminary research

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -32,6 +32,9 @@
 
 \input{sections/ch2-intro.tex}
 
+\input{sections/ch2-preliminary-research.tex}
+
+%TODO:-----Merge these together into the ch2-preliminary-research file
 \input{sections/ch2-theory_Emil.tex}
 
 \input{sections/ch2-theory_Thomas.tex}
@@ -39,6 +42,7 @@
 \input{sections/ch2-theory_Anthony.tex}
 
 \input{sections/ch2-theory_Gustavo.tex}
+%-----
 
 \input{sections/ch2-stakeholder-analysis.tex}
 
