chapter 3, all sections. first writing

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -32,32 +32,19 @@
 
 \input{sections/ch2-intro.tex}
 
-\input{sections/ch2-preliminary-research.tex}
-
-%TODO:-----Merge these together into the ch2-preliminary-research file
 \input{sections/ch2-theory_Emil.tex}
 
 \input{sections/ch2-theory_Thomas.tex}
-
-\input{sections/ch2-theory_Anthony.tex}
-
-\input{sections/ch2-theory_Gustavo.tex}
-%-----
-
-\input{sections/ch2-stakeholder-analysis.tex}
-
-\input{sections/ch2-risk-analysis.tex}
-
 
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
 
-%\input{sections/ch3-problemanalysisconclusion.tex}
+\input{sections/ch3-problemanalysisconclusion.tex}
 
-%\input{sections/ch3-problemdelimitation.tex}
+\input{sections/ch3-problemdelimitation.tex}
 
-
+\input{sections/ch3-requirements.tex}
 
 \input{sections/ch3-hypothesis.tex}
 
@@ -88,6 +75,14 @@
 \chapter{Conclusion}\label{ch:conclusion}
 
 \input{sections/ch6-conclusion.tex}
+
+%Latex part of the report -------------
+
+%\chapter{\LaTeX}\label{ch:latex}
+
+%\input{sections/ch6-1-latex.tex}
+
+%--------------------------
 
 %Chapter 7  -----------
 \clearpage
