--- a/report/sections/ch3-hypothesis.tex
+++ b/report/sections/ch3-hypothesis.tex
@@ -1,3 +1,4 @@
 \section{Hypothesis}
 
-Hypothesis
+Due to the fact that our report deals with such a broad scope, we can not answer our initiating problem in such a short time. Therefore a hypothesis is used to measure the success of our project.
+The solution to the initiating problem implemented in this project, will make an rover capable of 2D mapping an unknown terrain and be able to find its own path around. Then return a usable 2D map of its surroundings from point A to B. The rover should also be capable of implementing a 3D sensor for further mapping.
