--- a/report/sections/ch3-problemdefinition.tex
+++ b/report/sections/ch3-problemdefinition.tex
@@ -1,3 +1,4 @@
 \section{Problem Definition}
 
-Problem Definition
+The scope of this project is to create a working and affordable prototype of the above delimited problem, that would showcase the main capabilities of the end product, and would validate the idea of solving the presented problem in the Problem Analysis chapter.
+Through testing our hypothesis and by fulfilling the requirements displayed above, we will be able to determine whether or not the project is a success.
