--- a/report/sections/ch2-theory_Gustavo.tex
+++ b/report/sections/ch2-theory_Gustavo.tex
@@ -25,10 +25,10 @@ The main cause for a pulse to travel slower than expected is in situations where
 %TODO: (Image?)
 
 
-Light based rangefinders are slightly affected by the density of the medium they travel in. In earth-like atmospheres, this effect is nearly negligible, as light only travels 0.03\% slower in air when compared to the vacuum.\cite{refraction}.
-%TODO: Image http://arxiv.org/pdf/1003.1508.pdf
+Sound moves faster through denser mediums, where light travels slower.
 
-Sound is also affected by the density of the medium it travels in, however, much more than when compared to light\cite{speedOfSound}.
+The speed of light is less affected by density than sound is. In earth-like atmospheres, light only travels 0.03\% slower in air when compared to the vacuum.\cite{refraction}\cite{speedOfSound}.
+%TODO: Image http://arxiv.org/pdf/1003.1508.pdf
 
 \subsection{Pressure Based}
 Pressure based sensors work by simply measuring how much pressure there is in a point in space. They can be used to measure the vertical distance between two points in a planet with an atmosphere\cite{barometric1}\cite{barometric2}.
