Fixed a compile issue

--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion of Problem Analysis}
 
 During the research for this, we have figured out with technologies we will use when solving our problem stated in the w-diagram.
-We will be using a rover to navigate around with sensor. Making a 2D map of its surroundings, with the possibility of implementing a sensor for 3D mapping. We will be using both sound and light sensor for navigation and mapping. Ultrasonic sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 5M). For mapping we will be using a laser sensor, that will either automaticly turn 360\deg or we will implement a motor to turn the sensor.
+We will be using a rover to navigate around with sensor. Making a 2D map of its surroundings, with the possibility of implementing a sensor for 3D mapping. We will be using both sound and light sensor for navigation and mapping. Ultrasonic sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 5M). For mapping we will be using a laser sensor, that will either automaticly turn 360$\deg$ or we will implement a motor to turn the sensor.
 The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic sensors. the control computer will be a Raspberry Pi running a debian unix. The reason for using the Raspberry Pi is that it can multitask, read many sensors at the same time. And build the 2D map on the go. For other controllers like Arduino (microcontroller) we would only be able to collect data and need to build the map from it later, using another computer.  
 
 
