Re-added missing sections

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -32,10 +32,21 @@
 
 \input{sections/ch2-intro.tex}
 
+\input{sections/ch2-preliminary-research.tex}
+
+%TODO:-----Merge these together into the ch2-preliminary-research file
 \input{sections/ch2-theory_Emil.tex}
 
 \input{sections/ch2-theory_Thomas.tex}
 
+\input{sections/ch2-theory_Anthony.tex}
+
+\input{sections/ch2-theory_Gustavo.tex}
+%-----
+
+\input{sections/ch2-stakeholder-analysis.tex}
+
+\input{sections/ch2-risk-analysis.tex}
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
