done with theory

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -214,6 +214,29 @@
     howpublished = "\url{http://arxiv.org/pdf/1003.1508.pdf}"
 }
 
+@MISC{GPS1,
+	howpublished = "\url{http://www.loc.gov/rr/scitech/mysteries/global.html}"
+}
+
+@MISC{GPS2,
+	howpublished = "\url{http://www.bbc.com/news/science-environment-17557581}"
+}
+
+@MISC{Photogrammetry,
+	howpublished = "\url{http://um3d.dc.umich.edu/documents/123D-Catch-Field-Guide-1.pdf}"
+}
+
+@MISC{photo,
+	howpublished = "\url{http://www.geodetic.com/v-stars/what-is-photogrammetry.aspx}"
+}
+
+@MISC{reference,
+	howpublished = "\url{http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract}"
+}
+
+
+
+
 %-------------------------------------------------------
 %stakeholder analysis
 
