Gustavo needs to learn to compile before pushing FIX

--- a/report/sections/ch2-theory_Gustavo.tex
+++ b/report/sections/ch2-theory_Gustavo.tex
@@ -1,4 +1,4 @@
-\clearpageg
+\clearpage
 \section{Sensors}
 \subsection{Pressure Based}
 Pressure based sensors work by simply measuring how much pressure there is in a point in space. They can be used to measure the vertical distance between two points in a planet with an atmosphere\cite{barometric1}\cite{barometric2}. By combining height information with the data gathered by other sensors, it is possible to create a crude three-dimensional map.
