Restructured, expanded, cleared up Gustavo's part of theory + citations

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -234,8 +234,27 @@
 	howpublished = "\url{http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract}"
 }
 
+@MISC{planetstemp,
+	author = {Lunar and Planetary Institute},
+	title = {Solar System Temperatures},
+	month = nov,
+	year = {2012},
+	howpublished="\url{https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169}"
+}
 
+@MISC{planettypes,
+	author = {Elizabeth Howell},
+	title = {The Inner and Outer Planets in Our Solar System},
+	month = apr,
+	year = {2014},
+	howpublished = "\url{http://www.universetoday.com/34577/inner-and-outer-planets/}"
+}
 
+@MISC{outerplanetatmosphere,
+	author = {European Planet Network},
+	title = {Outer Planets},
+	howpublished = "\url{http://www.europlanet-eu.org/project/5-why/454-outer-planets}"
+}
 
 %-------------------------------------------------------
 %stakeholder analysis
