--- a/report/sections/ch2-theory_Anthony.tex
+++ b/report/sections/ch2-theory_Anthony.tex
@@ -1,22 +1,26 @@
 \clearpage
+
+\section{Resources}
+For the purpose of exploration and resource gathering, planets can be split into two categories. These two categories are:\cite{planettypes}
+\begin{itemize}
+	\item{\textbf{Terestrial planets}, also known as the \textit{Inner Planets}}
+	\item{\textbf{Gas giants}, also known as the \textit{Jovian planets} or the \textit{Outer Planets}}
+\end{itemize}
+
+There is very little reason to explore a gassy giant, as they smoothly transition between gas, liquid, and solid. This means that it is extremely difficult to colonize such a planet, or build anything on it for that matter, due to the layers of condensed helium and hydrogen that make out their atmosphere\cite{outerplanetatmosphere}.
+In the other hand, Earth-like planets have a larger variety of resources, and it is easier to build on them. These planets are often composed largely of metals and silicon, which is what gives them their rocky and sandy surface.
+
 \section{Environment}
-\subsection{Resources}
-For the purpose of exploration and resource gathering, planets can be split into two categories. The gassy giants, and the earthlike/rocky planets[ref?].
-There is very little reason to explore a gassy giant, as they smoothly transition between gas, lquid, and solid the deeper you look[citation needed]. This means that it is extremely difficult to colonize such a planet, or build anything on it for that matter. However, the gassy giants in our solar system have a relatively high helium content[citation], which is a valuable gas for research[ref?]. 
-In the other hand, earthlike planets have a larger variety of resources[citation?], and it is easier to build on them. These planets are often composed largely of metals and silicon[citation needed], which is what gives them their rocky and sandy surface[citation?].
+\subsection{Atmosphere}
+There are quite a few planets, in our solar system, with a negligible atmosphere[citation]. In these planets sound based sensors cannot work
+%TODO: Make sure to move this theoretical section after Gustavo's part about sensors
+, but light based sensors might even work better. These planets also tend to have a temperature very close to absolute zero\cite{planetstemp}.
+Planets with an atmosphere can be much harder to cope with. In these planets there can be threats such as, high winds, high pressure, high temperatures, corrosive gases, and liquids. When designing equipment for such environment, the specific environment must be kept in mind.
 
-
-\subsection{Environment}
-\subsubsection{Atmosphere}
-There are quite a few planets, in our solar system, with a negligible atmosphere[citation]. In these planets sound based sensors cannot work[refer to chapter], but light based sensors might even work better[refer to chapter]. These planets also thend to have a temperature very close to absolute zero. %[https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169]
-Planets with an atmosphere can be much harder to cope with. In these planets there can be threats such as, high winds, high pressure, high temperatures, corrosive gasses, and liquids. When designing equipment for such environment, the specific environment must be kept in mind.
-
-\subsubsection{Terrain}
-Earthlike planets are, by definition, rocky/sandy planets, which tend to have mountains, canyons, and craters.
-Earthlike planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
-
+\subsection{Terrain}
+Earth-like planets are, by definition, rocky/sandy planets, which tend to have mountains, canyons, and craters.
+Earth-like planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
 
 \section{Equipment}
-(low priority) (atmosphere)
 \subsection{Drones}
 \subsection{Rovers}
