--- a/report/sections/ch2-theory_Anthony.tex
+++ b/report/sections/ch2-theory_Anthony.tex
@@ -3,7 +3,7 @@
 \section{Resources}
 For the purpose of exploration and resource gathering, planets can be split into two categories. These two categories are:\cite{planettypes}
 \begin{itemize}
-	\item{\textbf{Terestrial planets}, also known as the \textit{Inner Planets}}
+	\item{\textbf{Terrestrial planets}, also known as the \textit{Inner Planets}}
 	\item{\textbf{Gas giants}, also known as the \textit{Jovian planets} or the \textit{Outer Planets}}
 \end{itemize}
 
