No ideas what to write about the drones and rovers

--- a/report/sections/ch2-theory_Anthony.tex
+++ b/report/sections/ch2-theory_Anthony.tex
@@ -21,6 +21,8 @@ Planets with an atmosphere can be much harder to cope with. In these planets the
 Earth-like planets are, by definition, rocky/sandy planets, which tend to have mountains, canyons, and craters.
 Earth-like planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
 
-\section{Equipment}
-\subsection{Drones}
-\subsection{Rovers}
+%\section{Equipment}
+%\subsection{Drones}
+%An unmanned aerial vehicle (UAV), commonly known as a drone and also referred to as an unpiloted aerial vehicle and a remotely piloted aircraft (RPA).
+%\subsection{Rovers}
+%Main features of rovers are: reliability, compactness and autonomy.
