Clearpage for readability

--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -16,6 +16,7 @@ Another scenario is underwater exploration, where trained divers are unable to e
 
 Besides exploration, the task of mapping unknown terrains is used in hostage situation and natural disasters as well, where people cannot enter a specific area without that being mapped upfront for various factors, like radiation leakage or armed terrorists. One example would be the Fukushima Nuclear Plant catastrophe in Fukushima, Japan on March, 2011. After the leakage in the reactor, rescue forces and scientist used autonomous drones to map the inside of the factory\cite{fukushima}, which was put under quarantine for high levels or radiation and therefore no person was allowed inside of the building without proper precautions. Drones and autonomous robots are perfect for scenarios like this.
 
+\clearpage
 \subsection{Where does this problem actually occur?}
 Unknown terrain can be defined as a terrain where no mapping has been done before.
 
