--- a/report/citations.bib
+++ b/report/citations.bib
@@ -199,18 +199,34 @@
 
 
 @MISC{refraction,
+    author = {James C. Owens},
+    title= {Optical Refractive Index of Air: Dependence on Pressure, Temperature and Composition},
+    month = jan,
+    year = 1967,
     howpublished = "\url{http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf}"
 }
 
 @MISC{speedOfSound,
+    author = E. A. Dean,
+    title = Atmosphere Effects on the Speed of Sound,
+    month = Aug,
+    year = 79,
     howpublished = "\url{http://www.dtic.mil/get-tr-doc/pdf?AD=ADA076060}"
 }
 
 @MISC{barometric1,
+    author = {Mario N. Berberan-Santos, et al},
+    title = On the Barometric Formula,
+    month = Mar,
+    year = 1996,
     howpublished = "\url{http://web.ist.utl.pt/ist12219/data/43.pdf}"
 }
 
 @MISC{barometric2,
+    author = {Gerhard Gerlich, Ralf D. Tscheuschner},
+    title = On The Barometric Formulas And Their Derivation From Hydrodynamics and Thermodynamics,
+    month = Mar,
+    year = 2010,
     howpublished = "\url{http://arxiv.org/pdf/1003.1508.pdf}"
 }
 
