--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -1,8 +1,8 @@
 \section{Conclusion of Problem Analysis}
 
-During the research for this, we have figured out with technologies we will use when solving our problem stated in the w-diagram.
-We will be using a rover to navigate around with sensor. Making a 2D map of its surroundings, with the possibility of implementing a sensor for 3D mapping. We will be using both sound and light sensor for navigation and mapping. Ultrasonic sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 5M). For mapping we will be using a laser sensor, that will either automaticly turn 360$\deg$ or we will implement a motor to turn the sensor.
-The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic sensors. the control computer will be a Raspberry Pi running a debian unix. The reason for using the Raspberry Pi is that it can multitask, read many sensors at the same time. And build the 2D map on the go. For other controllers like Arduino (microcontroller) we would only be able to collect data and need to build the map from it later, using another computer.  
+During the research for this project , we have figured out what technologies we will use when solving our problem, that is stated in the w-diagram.
+We will be using a rover to navigate around with multiple sensors. Making a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will be using both sound and light sensors for navigation and mapping. Ultrasonic sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 5m). For mapping we will be using a laser sensor, that will either automatically turn 360$\deg$ or we will implement a motor to rotate the sensor.
+The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic sensors. The control computer will be a Raspberry Pi running a Debian Unix. The reason for using the Raspberry Pi is that it can multi-task, read many sensors at the same time. And build the 2D map on the go. For other microcontrollers, like the Arduino, we would only be able to collect data and need to build the map from it later, using another computer.  
 
 
 %During the research for this project, we have figured out which technologies we will use when solving our problem statement. Through research we have looked at the different stakeholders and also taken into account the different health and safety measures and the environmental impact.
