--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -22,7 +22,7 @@ This section outlines the requirements for both the prototype that we are aiming
 	
 	\item The rover can be controlled using a remote.
 	\item The rover should navigate autonomous through a maze.
-	\item The laser sensor should make a usable 2D map of it's surroundings.
+	\item The laser sensor should make a usable 2D map of its surroundings.
 	
 \end{enumerate}
 
